# RandomWord

./: .env.example  .gitignore  README.md  english_words.json  english_words_a1.json  main.py  pyproject.toml  pyproject_backup.toml  requirements.txt  test.py  vercel.json
json_files/: english_words_a1.json  english_words_a2.json  english_words_b1.json  english_words_b2.json  english_words_c1.json
models/: __init__.py  models.py
random_word/: __init__.py  random_word.py
services/: __init__.py  services.py
